# mlp.cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
examples/: iris_predict.cpp  iris_train.cpp
include/: layer.h  mlp.h  neuron.h  utils.h
src/: layer.cpp  mlp.cpp  neuron.cpp  utils.cpp
tests/: layer_test.cpp  mlp_test.cpp  neuron_test.cpp
